# homepage

./: .eslintrc  .gitignore  .gitmodules  Justfile  LICENSE  README.md  build_all.sh  eslint.config.mjs  gatsby-browser.js  gatsby-config.js  gatsby-node.js  opt.sh  package.json  run.sh
.circleci/: config.yml
external_mixins/: .prettierrc  Justfile  package.json  svelte.config.js  vite.config.ts
external_mixins/src/: app.css  index.css  sentry.ts
notes/: Justfile  hugo.toml
notes/content/: _index.md
src/: html.js  licenses.csv  noteBlogPosts.json  projectManifest.json  triangleHooks.tsx  util.ts  workExperience.json
src/blog/: a-rusty-aoc.md  anime-recommender-model-architecture.md  apache2-performance-debugging-journey.md  boolean-logic-with-neural-networks.md  building-a-signal-analyzer-with-modern-web-tech.md  building-an-algorithmic-trading-platform-in-rust.md  building-embedding-visualizations-from-user-profiles.md  building-modular-audio-nodes-in-web-audio.md  building-music-galaxy.md  building-robintrack.md  building-spf420-syncup.md  building-static-wasm-opt-for-ci-cd.md  buliding-a-wavetable-synthesizer-with-rust-wasm-and-webaudio.md  computing-auto-smooth-shaded-normals-like-blender.md  creating-noise-function-compositor.md  depth-based-fragment-culling-webgl.md  fixing-a-bug-in-google-chrome.md  fm-synth-rust-wasm-simd.md  fullstack-sveltekit-recommendation-app-middle-end-development.md  graph-embeddings-for-music-discovery.md  growing-sparse-computational-graphs-with-rnns.md  osu-statistics-1.md  (+25 more)
triangles/: Cargo.toml
triangles/src/: lib.rs
(+168 files in other folders)
