[package]
authors = ["Casey Primozic <me@ameo.link>"]
edition = "2018"
name = "engine"
version = "0.1.0"

[dependencies]
nalgebra = "0.20"
ncollide2d = "0.22"
wasm-bindgen = "=0.2.64"
rand = "0.7.3"
rand_pcg = "0.2.1"
rand_core = "0.5.1"
console_error_panic_hook = "0.1.6"

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
