[package]
authors = ["Casey Primozic <casey@cprimozic.net>"]
edition = "2018"
name = "engine"
version = "0.1.0"

[dependencies]
nalgebra = "0.27"
ncollide2d = "0.28"
wasm-bindgen = "=0.2.78"
rand = "0.7.3"
rand_pcg = "0.2.1"
rand_core = "0.5.1"
console_error_panic_hook = "0.1.6"

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
