[package]
authors = ["Casey Primozic <casey@cprimozic.net>"]
edition = "2018"
name = "engine"
version = "0.1.0"

[dependencies]
ncollide2d = "0.33"
wasm-bindgen = "=0.2.92"
rand = "0.7.3"
rand_pcg = "0.2.1"
rand_core = "0.5.1"
console_error_panic_hook = "0.1.6"

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
